idk what changed

--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -130,9 +130,7 @@
     "print(\"Metrics for Total Rebounds (TRB):\")\n",
     "print(f\"MSE: {mse_trb}\")\n",
     "print(f\"MAE: {mae_trb}\")\n",
-    "print(f\"R-squared: {r2_trb}\")\n",
-    "\n",
-    "\n"
+    "print(f\"R-squared: {r2_trb}\")\n"
    ]
   }
  ],
