im not sure what changed here

--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
     "season2005_condition = nba_df['Season'] <= 2005\n",
     "nba_df.drop(index=nba_df[season2005_condition].index, inplace=True)\n",
     "\n",
-    "print(f\"Length of data set after dropping all seasons before 2005 and dropping the 2023 season: {len(nba_df)} rows\")\n",
+    "print(f\"Length of data set after dropping all seasons before 2005 and dropping tzzhe 2023 season: {len(nba_df)} rows\")\n",
     "\n",
     "gp_condition = nba_df[\"GP\"] <= 10\n",
     "nba_df.drop(index=nba_df[gp_condition].index, inplace=True)\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,8 +98,8 @@
      "output_type": "stream",
      "text": [
       "Metrics for Points (PTS) with Linear Regression:\n",
-      "MSE: 27273.77478118538\n",
-      "MAE: 110.01000189782208\n",
+      "MSE: 27273.774781185377\n",
+      "MAE: 110.01000189782206\n",
       "R-squared: 0.8611896448914378\n"
      ]
     }
@@ -113,7 +113,7 @@
     "\n",
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_pts_train, y_pts_test = train_test_split(\n",
-    "    X, y_pts, test_size=0.4, random_state=42\n",
+    "    X, y_pts, test_size=0.4, random_state=42zz\n",
     ")\n",
     "\n",
     "# Create and fit the scaler on the training data\n",
@@ -961,7 +961,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
