this is the correct commit

--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -17,33 +17,51 @@
      "output_type": "stream",
      "text": [
       "Original data set length: 31550 rows\n",
-      "Length of data set after dropping all seasons before 2005 and dropping the 2023 season: 11236 rows\n",
-      "Length of data set after dropping all rows with less than 10 games played: 9686 rows\n",
-      "\n",
-      "\n",
+      "Length of data set after dropping the 2024 season: 31135 rows\n",
+      "Length of data set after dropping all rows with less than 10 games played: 27308 rows\n",
       "Columns with missing data:\n",
-      "3P%    911\n",
-      "2P%      1\n",
-      "FT%     54\n",
+      "Age      12\n",
+      "GS     7706\n",
+      "MP      939\n",
+      "3P     5725\n",
+      "3PA    5725\n",
+      "3P%    8346\n",
+      "2P%       1\n",
+      "FT%      85\n",
+      "ORB    4153\n",
+      "DRB    4153\n",
+      "TRB     769\n",
+      "STL    4969\n",
+      "BLK    4968\n",
+      "TOV    5068\n",
       "dtype: int64\n",
       "\n",
       "\n",
       "Columns with missing data after filling:\n",
-      "FG%     0\n",
-      "3P%     0\n",
-      "2P%     0\n",
-      "eFG%    0\n",
-      "FT%     0\n",
+      "3P%    0\n",
+      "2P%    0\n",
+      "FT%    0\n",
+      "Age    0\n",
+      "GS     0\n",
+      "MP     0\n",
+      "3P     0\n",
+      "3PA    0\n",
+      "ORB    0\n",
+      "DRB    0\n",
+      "TRB    0\n",
+      "STL    0\n",
+      "BLK    0\n",
+      "TOV    0\n",
       "dtype: int64\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, RandomizedSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "import numpy as np\n",
     "\n",
     "nba_df = pd.read_csv('player_totals.csv', encoding = 'unicode_escape', engine ='python')\n",
     "\n",
@@ -52,17 +70,21 @@
     "season2024_condition = nba_df['Season'] > 2023\n",
     "nba_df.drop(index=nba_df[season2024_condition].index, inplace=True)\n",
     "\n",
-    "season2005_condition = nba_df['Season'] <= 2005\n",
-    "nba_df.drop(index=nba_df[season2005_condition].index, inplace=True)\n",
+    "# season2005_condition = nba_df['Season'] <= 2005\n",
+    "# nba_df.drop(index=nba_df[season2005_condition].index, inplace=True)\n",
     "\n",
-    "print(f\"Length of data set after dropping all seasons before 2005 and dropping the 2023 season: {len(nba_df)} rows\")\n",
+    "# targeting modern game\n",
+    "\n",
+    "print(f\"Length of data set after dropping the 2024 season: {len(nba_df)} rows\")\n",
     "\n",
     "gp_condition = nba_df[\"GP\"] <= 10\n",
     "nba_df.drop(index=nba_df[gp_condition].index, inplace=True)\n",
     "\n",
     "print(f\"Length of data set after dropping all rows with less than 10 games played: {len(nba_df)} rows\")\n",
-    "print(\"\\n\")\n",
     "\n",
+    "# nba_df = nba_df.dropna()\n",
+    "\n",
+    "# print(f\"Length of data set after dropping all rows with NA values: {len(nba_df)} rows\")\n",
     "\n",
     "missing_data = nba_df.isnull().sum()\n",
     "\n",
@@ -70,15 +92,14 @@
     "print(missing_data[missing_data > 0])\n",
     "print(\"\\n\")\n",
     "\n",
-    "columns_to_fill = ['FG%', '3P%', '2P%', 'eFG%', 'FT%' ]\n",
+    "columns_to_fill = ['3P%', '2P%', 'FT%', 'Age', 'GS', 'MP', '3P', '3PA', 'ORB', 'DRB', 'TRB', 'STL', 'BLK', 'TOV']\n",
     "\n",
     "nba_df[columns_to_fill] = nba_df[columns_to_fill].fillna(0)\n",
     "\n",
     "missing_data_updated = nba_df[columns_to_fill].isnull().sum()\n",
     "\n",
     "print('Columns with missing data after filling:')\n",
-    "print(missing_data_updated)\n",
-    "\n"
+    "print(missing_data_updated)\n"
    ]
   },
   {
@@ -90,17 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Metrics for Points (PTS) with Linear Regression:\n",
-      "MSE: 27273.77478118538\n",
-      "MAE: 110.01000189782208\n",
-      "R-squared: 0.8611896448914378\n"
+      "Metrics for Points (PTS) with Linear Regression (Non-negative predictions):\n",
+      "MSE: 40094.83616378065\n",
+      "MAE: 131.12368250218483\n",
+      "R-squared: 0.831182620575668\n",
+      "Minimum y points from predicted: 0.0\n",
+      "Max y points from predicted: 1793.8716607451993\n",
+      "Minimum y points from tested: 2\n",
+      "Max y points from test: 3033\n"
      ]
     }
    ],
@@ -108,12 +133,13 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# Extract features and target variable\n",
-    "X = nba_df[[\"GP\", \"MP\", \"FG%\", \"3P%\", \"2P%\", \"FT%\"]]\n",
+    "X = nba_df[[\"GP\", \"MP\", \"FG%\",\"3P%\", \"2P%\", \"FT%\"]]\n",
+    "# X = nba_df[[\"GP\", \"MP\", \"2P\", \"FG\", \"FGA\", \"3PA\", \"3P\", \"2PA\", \"FT\" ]]\n",
     "y_pts = nba_df[\"PTS\"]\n",
     "\n",
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_pts_train, y_pts_test = train_test_split(\n",
-    "    X, y_pts, test_size=0.4, random_state=42\n",
+    "    X, y_pts, test_size=0.4, random_state=13\n",
     ")\n",
     "\n",
     "# Create and fit the scaler on the training data\n",
@@ -129,15 +155,26 @@
     "# Predictions on scaled data\n",
     "y_pts_pred_scaled = model_pts_scaled.predict(X_test_scaled)\n",
     "\n",
-    "# Evaluation for Points (PTS) on scaled data\n",
-    "mse_pts_scaled = mean_squared_error(y_pts_test, y_pts_pred_scaled)\n",
-    "mae_pts_scaled = mean_absolute_error(y_pts_test, y_pts_pred_scaled)\n",
-    "r2_pts_scaled = r2_score(y_pts_test, y_pts_pred_scaled)\n",
+    "# Post-process the predictions to ensure non-negativity\n",
+    "y_pts_pred_scaled_non_negative = np.maximum(y_pts_pred_scaled, 0)\n",
     "\n",
-    "print(\"Metrics for Points (PTS) with Linear Regression:\")\n",
+    "# Evaluation for Points (PTS) on scaled data\n",
+    "mse_pts_scaled = mean_squared_error(y_pts_test, y_pts_pred_scaled_non_negative)\n",
+    "mae_pts_scaled = mean_absolute_error(y_pts_test, y_pts_pred_scaled_non_negative)\n",
+    "r2_pts_scaled = r2_score(y_pts_test, y_pts_pred_scaled_non_negative)\n",
+    "min_y_pts_pred = min(y_pts_pred_scaled_non_negative)\n",
+    "max_y_pts_pred = max(y_pts_pred_scaled_non_negative)\n",
+    "min_y_pts_test = min(y_pts_test)\n",
+    "max_y_pts_test = max(y_pts_test)\n",
+    "\n",
+    "print(\"Metrics for Points (PTS) with Linear Regression (Non-negative predictions):\")\n",
     "print(f\"MSE: {mse_pts_scaled}\")\n",
     "print(f\"MAE: {mae_pts_scaled}\")\n",
-    "print(f\"R-squared: {r2_pts_scaled}\")\n"
+    "print(f\"R-squared: {r2_pts_scaled}\")\n",
+    "print(f\"Minimum y points from predicted: {min_y_pts_pred}\")\n",
+    "print(f\"Max y points from predicted: {max_y_pts_pred}\")\n",
+    "print(f\"Minimum y points from tested: {min_y_pts_test}\")\n",
+    "print(f\"Max y points from test: {max_y_pts_test}\")"
    ]
   },
   {
@@ -559,7 +596,7 @@
     "print(f\"MSE: {mse_pts_tuned_rf}\")\n",
     "print(f\"MAE: {mae_pts_tuned_rf}\")\n",
     "print(f\"R-squared: {r2_pts_tuned_rf}\")\n",
-    "print(f\"Grid Search took {elapsed_time_rounded} seconds.\")\n"
+    "print(f\"Grid Search took {elapsed_time_rounded} seconds.\")"
    ]
   },
   {
@@ -711,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -719,9 +756,9 @@
      "output_type": "stream",
      "text": [
       "Metrics for Points (PTS) with Untuned k-Nearest Neigbours Regression\n",
-      "MSE: 24737.683189677424\n",
-      "MAE: 103.71473548387097\n",
-      "R-squared: 0.8740971275273913\n"
+      "MSE: 31116.79576711827\n",
+      "MAE: 115.98396191871107\n",
+      "R-squared: 0.8666519628985883\n"
      ]
     }
    ],
@@ -732,8 +769,6 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# Assuming X and y are your features and target variable\n",
-    "X = nba_df[[\"GP\", \"MP\", \"FG%\", \"3P%\", \"2P%\", \"FT%\"]]\n",
-    "y_pts = nba_df[\"PTS\"]\n",
     "\n",
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y_pts, test_size=0.4, random_state=42)\n",
