updated input features and more cross validation i think

--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,10 +119,10 @@
      "output_type": "stream",
      "text": [
       "Metrics for Points (PTS) with Linear Regression and Cross-Validation:\n",
-      "MSE: 3057.3544741968035\n",
-      "MAE: 36.514456396036174\n",
-      "R-squared: 0.9869317159981545\n",
-      "Adjusted R-squared: 0.9869283651561028\n"
+      "MSE: 3318.2778205637574\n",
+      "MAE: 37.39994090082341\n",
+      "R-squared: 0.9858163503124384\n",
+      "Adjusted R-squared: 0.9858142723503555\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
     "import numpy as np\n",
     "\n",
     "# Extract features and target variable\n",
-    "X = nba_df[[\"GP\", \"MP\", \"FG%\", \"3P%\", \"2P%\", \"FT%\", \"FG\"]]\n",
+    "X = nba_df[[\"GP\", \"MP\", \"FG%\", \"FG\"]]\n",
     "y_pts = nba_df[\"PTS\"]\n",
     "\n",
     "# Create and fit the scaler on the data\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,9 +194,10 @@
      "output_type": "stream",
      "text": [
       "Metrics for Points (PTS) with Untuned Random Forest Model and 10-fold Cross-Validation:\n",
-      "Mean MSE: 2733.2686937115295\n",
-      "Mean MAE: 31.89916942029044\n",
-      "Mean R-squared: 0.9881656672845063\n"
+      "MSE: 3653.0698892261585\n",
+      "MAE: 37.092705480288046\n",
+      "R-squared: 0.98399982360813\n",
+      "Adjusted R-squared: 0.983997479517533\n"
      ]
     }
    ],
@@ -224,10 +225,16 @@
     "mae_pts_mean = np.mean(cv_mae_pts)\n",
     "r2_pts_mean = np.mean(cv_r2_pts)\n",
     "\n",
+    "# Calculate adjusted R-squared\n",
+    "n = len(y_pts)\n",
+    "k = X_scaled.shape[1]\n",
+    "adjusted_r2_pts = 1 - ((1 - r2_pts_mean) * (n - 1) / (n - k - 1))\n",
+    "\n",
     "print(\"Metrics for Points (PTS) with Untuned Random Forest Model and 10-fold Cross-Validation:\")\n",
     "print(f\"MSE: {mse_pts_mean}\")\n",
     "print(f\"MAE: {mae_pts_mean}\")\n",
-    "print(f\"R-squared: {r2_pts_mean}\")\n"
+    "print(f\"R-squared: {r2_pts_mean}\")\n",
+    "print(f\"Adjusted R-squared: {adjusted_r2_pts}\")\n"
    ]
   },
   {
@@ -490,7 +497,7 @@
     "import psutil\n",
     "\n",
     "# Assuming X and y are your features and target variable\n",
-    "X = nba_df[[\"GP\", \"MP\", \"FG%\", \"3P%\", \"2P%\", \"FT%\", \"FG\"]]\n",
+    "X = nba_df[[\"GP\", \"MP\", \"FG%\", \"FG\"]]\n",
     "y_pts = nba_df[\"PTS\"]\n",
     "\n",
     "# Create and fit the scaler on the entire data\n",
@@ -798,7 +805,7 @@
     "import numpy as np\n",
     "\n",
     "# Assuming X and y are your features and target variable\n",
-    "X = nba_df[[\"GP\", \"MP\", \"FG%\", \"3P%\", \"2P%\", \"FT%\", \"FG\"]]\n",
+    "X = nba_df[[\"GP\", \"MP\", \"FG%\", \"FG\"]]\n",
     "y_pts = nba_df[\"PTS\"]\n",
     "\n",
     "# Scale the data\n",
@@ -890,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -898,14 +905,13 @@
      "output_type": "stream",
      "text": [
       "Metrics for Points (PTS) with Tuned k-Nearest Neighbors Regression (Randomized Search)\n",
-      "MSE: 4365.571199368685\n",
-      "MAE: 46.80066040211079\n",
-      "R-squared: 0.9812917642735751\n",
-      "R-squared (CV): 0.9805373903174432\n",
-      "Adjusted R-squared (CV): 0.9805832314129581\n",
-      "Randomized Search took 5.47 seconds.\n",
-      "Average CPU Usage: 7.2%\n",
-      "Average Memory Usage: 56.7%\n"
+      "MSE: 3889.8392584749695\n",
+      "MAE: 40.347583659548185\n",
+      "R-squared (CV): 0.9840094521432474\n",
+      "Adjusted R-squared (CV): 0.9840346933017091\n",
+      "Randomized Search took 2.8 seconds.\n",
+      "Average CPU Usage: 11.7%\n",
+      "Average Memory Usage: 66.8%\n"
      ]
     }
    ],
@@ -919,7 +925,7 @@
     "import psutil\n",
     "\n",
     "# Assuming X and y are your features and target variable\n",
-    "X = nba_df[[\"GP\", \"MP\", \"FG%\", \"3P%\", \"2P%\", \"FT%\", \"FG\"]]\n",
+    "X = nba_df[[\"GP\", \"MP\", \"FG%\", \"FG\"]]\n",
     "y_pts = nba_df[\"PTS\"]\n",
     "\n",
     "# Split the data into training and testing sets\n",
@@ -997,7 +1003,6 @@
     "print(\"Metrics for Points (PTS) with Tuned k-Nearest Neighbors Regression (Randomized Search)\")\n",
     "print(f\"MSE: {mse}\")\n",
     "print(f\"MAE: {mae}\")\n",
-    "print(f\"R-squared: {r2}\")\n",
     "print(f\"R-squared (CV): {r2_mean}\")\n",
     "print(f\"Adjusted R-squared (CV): {adj_r2_mean}\")\n",
     "print(f\"Randomized Search took {elapsed_time_rounded} seconds.\")\n",
@@ -1024,7 +1029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
